[metadata]
name = marys
version = attr:marys.__version__
url = https://github.com/codeofdusk/marys
author = Bill Dengler
author_email = codeofdusk@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
description = Library to obtain dining hours and menus at Swarthmore College
long_description = file: README.md
long_description_content_type = text/markdown
[options]
packages = find:
install_requires =
    requests
    aiohttp
    pytz
    python-dateutil
    unidecode
python_requires = >=3.6